# SiriusProject

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  resourse.aps  resourse.rc
src/calc/: CMakeLists.txt  calc.cpp  calc.h
